--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,7 +5,18 @@ repositories {
 }
 
 dependencies {
+    implementation "com.google.api-client:google-api-client-gson:1.30.11"
     implementation "com.google.cloud:google-cloud-firestore:2.1.0"
+    implementation "com.google.oauth-client:google-oauth-client:1.31.2"
     implementation "com.google.cloud:google-cloud-storage:1.113.2"
     implementation "io.javalin:javalin:3.11.0"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
+    testImplementation "org.mockito:mockito-core:3.6.0"
+
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.7.0"
+}
+
+test {
+    useJUnitPlatform()
 }
