Basic Android app navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,19 @@
 apply plugin : 'com.android.application'
 
 android {
-    repositories {
-        google()
-        jcenter()
-    }
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         multiDexEnabled true
-        applicationId "com.magikarp.app"
-        minSdkVersion 29
+        applicationId "com.magikarp.android"
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-    }
+        vectorDrawables.useSupportLibrary = true
 
-    compileOptions {
-        compileSdkVersion 29
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -34,8 +28,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
+
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment:2.3.1'
+    implementation 'androidx.navigation:navigation-ui:2.3.1'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    implementation 'com.google.maps.android:android-maps-utils:2.0.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
