--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,15 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1"
+        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
 }
