--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id "application"
+}
 apply plugin: 'java'
 
 repositories {
@@ -21,4 +24,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+
+application {
+    mainClassName = "server.Server"
 }
