--- a/.github/workflows/magikarp.yml
+++ b/.github/workflows/magikarp.yml
@@ -13,6 +13,7 @@ jobs:
         strategy:
             matrix:
                 os: [ ubuntu-18.04, ubuntu-20.04 ]
+                build: [ Debug, Release ]
 
         steps:
             - uses: actions/checkout@v2
@@ -32,7 +33,7 @@ jobs:
                 restore-keys: ${{ matrix.os }}-gradle-
 
             - name: Build Application
-              run: ./gradlew build -x test
+              run: ./gradlew build :app:assemble${{ matrix.build }} -x test
 
             - name: Run Tests
               run: ./gradlew test
