adding server tests

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -15,9 +15,12 @@ dependencies {
     implementation "com.google.cloud:google-cloud-storage:1.113.2"
     implementation "io.javalin:javalin:3.11.0"
     implementation "org.slf4j:slf4j-simple:1.7.30"
+    implementation "commons-io:commons-io:2.8.0"
+
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testImplementation "org.mockito:mockito-core:3.6.0"
+    testImplementation "com.konghq:unirest-java:3.11.05"
 
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.7.0"
 }
