--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,14 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.6.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'org.mockito:mockito-core:3.6.0'
+
+    def nav_version = "2.3.1"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    def fragment_version = "1.2.5"
+    androidTestImplementation "androidx.fragment:fragment-testing:$fragment_version"
+
+    def contrib_version = "3.3.0"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$contrib_version"
 }
