--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,13 @@ allprojects {
     }
 
     apply plugin: 'com.github.spotbugs'
+
+    spotbugsMain{
+        reports {
+            xml.enabled = false
+            html.enabled = true
+        }
+    }
 }
 
 subprojects {
