--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
 
     def contrib_version = "3.3.0"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$contrib_version"
+
+    def intent_version = "3.1.1"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$intent_version"
 }
