--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -58,19 +59,11 @@ dependencies {
     annotationProcessor "com.google.dagger:hilt-android-compiler:2.29-alpha"
     testImplementation 'junit:junit:4.13.1'
     testImplementation 'org.mockito:mockito-core:3.6.0'
+    androidTestImplementation "androidx.fragment:fragment-testing:1.2.5"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.3.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.3.0"
     androidTestImplementation 'org.mockito:mockito-core:3.6.0'
-
-    def nav_version = "2.3.1"
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-
-    def fragment_version = "1.2.5"
-    androidTestImplementation "androidx.fragment:fragment-testing:$fragment_version"
-
-    def contrib_version = "3.3.0"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:$contrib_version"
-
-    def intent_version = "3.1.1"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:$intent_version"
 }
