Disable spotbugs for android, remove checkstyle from generated

--- a/.github/workflows/magikarp.yml
+++ b/.github/workflows/magikarp.yml
@@ -42,4 +42,4 @@ jobs:
               run: ./gradlew :app:checkstyle${{ matrix.build }} :server:checkstyleMain
 
             - name: Run Spotbugs
-              run: ./gradlew :app:spotbugs${{ matrix.build }} :server:spotbugsMain
+              run: ./gradlew :server:spotbugsMain
