--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,6 +1,17 @@
-plugins {
-    id "application"
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+
+    dependencies {
+        classpath "gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.6.0"
+    }
 }
+
+apply plugin: 'application'
+apply plugin: 'com.github.spotbugs'
 apply plugin: 'java'
 
 repositories {
@@ -16,7 +27,6 @@ dependencies {
     implementation "io.javalin:javalin:3.11.0"
     implementation "org.slf4j:slf4j-simple:1.7.30"
     implementation "commons-io:commons-io:2.8.0"
-
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testImplementation "org.mockito:mockito-core:3.6.0"
