--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,10 @@ allprojects {
     }
 
     apply plugin: 'com.github.spotbugs'
-    
+
+    spotbugs {
+        excludeFilter = file("../config/spotbugs/excludeFilter.xml")
+    }
 }
 
 subprojects {
