--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     annotationProcessor "com.google.dagger:hilt-android-compiler:2.29-alpha"
     testImplementation 'junit:junit:4.13.1'
-    testImplementation 'org.mockito:mockito-inline:3.6.0'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
     androidTestImplementation "androidx.fragment:fragment-testing:1.2.5"
     androidTestImplementation "androidx.navigation:navigation-testing:2.3.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
