--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ allprojects {
     apply plugin: 'com.github.spotbugs'
 
     spotbugs {
+        ignoreFailures = false
         excludeFilter = file("../config/spotbugs/excludeFilter.xml")
     }
 }
