--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.29.1-alpha'
         classpath "gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.6.0"
+        classpath 'com.google.gms:google-services:4.3.4'  // Google Services plugin
     }
 }
 
