Added icons and app name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:name=".ui.app.MagikarpApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_myplace"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_myplace_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Magikarp"
         android:usesCleartextTraffic="true">
