--- a/.github/workflows/magikarp.yml
+++ b/.github/workflows/magikarp.yml
@@ -12,8 +12,8 @@ jobs:
 
         strategy:
             matrix:
-                os: [ ubuntu-18.04, ubuntu-20.04 ]
-                build: [ Debug, Release ]
+                os: [ ubuntu-20.04 ]
+                build: [ Release ]
 
         steps:
             - uses: actions/checkout@v2
