--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,27 +50,26 @@ android {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:26.1.0')
-
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation "com.google.dagger:hilt-android:2.29.1-alpha"
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.google.maps.android:android-maps-utils:2.1.0'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'com.google.firebase:firebase-storage'
+    implementation "androidx.activity:activity:1.2.0-beta01"
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     annotationProcessor "com.google.dagger:hilt-android-compiler:2.29-alpha"
     testImplementation 'junit:junit:4.13.1'
