--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:2.1.0'
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     annotationProcessor 'com.google.dagger:hilt-android-compiler:2.29-alpha'
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation 'androidx.test:runner:1.3.0'
