Upload build artifacts as part of CI

--- a/.github/workflows/magikarp.yml
+++ b/.github/workflows/magikarp.yml
@@ -45,3 +45,11 @@ jobs:
 
             - name: Run Spotbugs
               run: ./gradlew :app:spotbugs${{ matrix.build }} :server:spotbugsMain
+            
+            - name: Upload Build Reports
+              uses: actions/upload-artifact@v2
+              with:
+                name: android-build-reports
+                path: |
+                  app/build/reports
+                  server/build/reports
