--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <intent>
             <action android:name="android.intent.action.SENDTO" />
         </intent>
+
+        <package android:name="com.google.android.apps.maps" />
     </queries>
 
     <application
