--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,11 +59,12 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.activity:activity:1.2.0-beta01'
+    implementation 'androidx.activity:activity:1.2.0-beta02'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.fragment:fragment:1.3.0-beta01'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'androidx.fragment:fragment:1.3.0-beta02'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
