Increased code coverage

--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,8 @@ subprojects {
                 addCheckStyleTaskForAndroidVariants(project)
             }
     }
+
+    tasks.withType(Test) {
+        enableAssertions = true
+    }
 }
