Added more integration tests

--- a/.github/workflows/magikarp.yml
+++ b/.github/workflows/magikarp.yml
@@ -45,6 +45,9 @@ jobs:
 
             - name: Run Spotbugs
               run: ./gradlew :app:spotbugs${{ matrix.build }} :server:spotbugsMain
+
+            - name: Run JaCoCo
+              run: ./gradlew jacocoTestReport
             
             - name: Upload Build Reports
               uses: actions/upload-artifact@v2
