--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,10 @@ android {
     }
 
     enableJacoco(project, 'Debug')
+
+    hilt {
+        enableTransformForLocalTests = true
+    }
 }
 
 dependencies {
@@ -100,6 +104,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'org.mockito:mockito-core:3.6.0', { exclude group: 'net.bytebuddy' }
     androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito-inline-extended:2.28.0'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
 
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-beta02"
     debugImplementation "androidx.fragment:fragment-ktx:1.3.0-beta02"
