--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,20 +58,24 @@ android {
     }
 
     enableJacoco(project, 'Debug')
+
+    hilt {
+        enableTransformForLocalTests = true
+    }
 }
 
 dependencies {
-    implementation 'androidx.activity:activity:1.2.0-beta01'
+    implementation 'androidx.activity:activity:1.2.0-beta02'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.fragment:fragment:1.3.0-beta01'
+    implementation 'androidx.fragment:fragment:1.3.0-beta02'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.1'
-    implementation 'androidx.navigation:navigation-ui:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.2'
+    implementation 'androidx.navigation:navigation-ui:2.3.2'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
@@ -90,14 +94,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     testImplementation 'org.mockito:mockito-core:3.6.0'
     testImplementation 'org.robolectric:robolectric:4.4'
-    androidTestImplementation 'androidx.fragment:fragment-testing:1.2.5'
-    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.1'
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test:core:1.2.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'org.mockito:mockito-core:3.6.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'org.mockito:mockito-core:3.6.0', { exclude group: 'net.bytebuddy' }
+    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito-inline-extended:2.28.0'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-beta02"
+    debugImplementation "androidx.fragment:fragment-ktx:1.3.0-beta02"
+    debugImplementation "androidx.test:core:1.3.0"
+    debugImplementation "androidx.test:rules:1.3.0"
+    debugImplementation "androidx.test:runner:1.3.0"
 }
