Added terms of service and privacy policy links

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         <intent>
             <action android:name="android.intent.action.SENDTO" />
         </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
 
         <package android:name="com.google.android.apps.maps" />
     </queries>
